--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "jodit-react": "^4.1.2",
     "js-cookie": "^3.0.5",
